@@ -1,3 +1,5 @@
+	- Added the pg_protocol database handle attribute
+		[Greg Sabino Mullane]
 	- Changed "noprefix" to pg_noprefix
 1.32 Wed Feb 25 18:24:18 UTC 2004
 	- Bugfix for memory allocation problems on win systems
